--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
+  test: ^1.19.3
   build_runner:
   flutter_gen_runner:
   retrofit_generator: ">=3.0.0 <4.0.0"
@@ -52,6 +53,9 @@ dev_dependencies:
   flutter_native_splash: ^1.3.1
   flutter_launcher_icons: ^0.9.2
 ##  lint: ^1.7.2
+
+dependency_overrides:
+  test_api: 0.4.2
 
 ## https://pub.dev/packages/flutter_gen
 flutter_gen:
