--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dev_dependencies:
   auto_route_generator: ^3.1.0
   flutter_native_splash: ^1.3.1
   flutter_launcher_icons: ^0.9.2
+  mock_web_server: ^5.0.0-nullsafety.1
 ##  lint: ^1.7.2
 
 dependency_overrides:
