--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   fast_base58: ^0.2.1
   elliptic: ^0.3.5
   secp256k1: ^0.3.0
+  crypto: ^3.0.1
+  hash: ^1.0.4
+  dart_bech32: ^2.0.0
 
 dev_dependencies:
   flutter_test:
