--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,8 +83,15 @@ flutter:
     - assets/env/.env.production
     - assets/env/.env.staging
     - assets/env/
-    - assets/
+    - assets/images/
 
+  fonts:
+    - family: BeVietnamPro
+      fonts:
+        - asset: assets/fonts/BeVietnamPro-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/BeVietnamPro-Regular.ttf
+          weight: 400
 flutter_intl:
   enabled: true
   class_name: Strings
