add mnemonic & hdnode

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,14 @@ dependencies:
   url_launcher: ^6.0.13
   modal_bottom_sheet: ^2.0.0
 
-  ## blockchain dependencies
+  ## crypto dependencies
   fast_base58: ^0.2.1
   hash: ^1.0.4
   dart_bech32: ^2.0.0
   elliptic: ^0.3.5
   pointycastle: ^3.4.0
+  bip39: ^1.0.6
+  hdkey: ^0.0.1
 
 dev_dependencies:
   flutter_test:
