--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,8 @@ flutter:
   fonts:
     - family: BeVietnamPro
       fonts:
+        - asset: assets/fonts/BeVietnamPro-SemiBold.ttf
+          weight: 600
         - asset: assets/fonts/BeVietnamPro-Medium.ttf
           weight: 500
         - asset: assets/fonts/BeVietnamPro-Regular.ttf
