--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   url_launcher: ^6.0.13
   modal_bottom_sheet: ^2.0.0
   flutter_switch: ^0.3.2
+  freezed_annotation:
 
   ## crypto dependencies
   fast_base58: ^0.2.1
@@ -65,6 +66,7 @@ dev_dependencies:
   flutter_native_splash: ^1.3.1
   flutter_launcher_icons: ^0.9.2
   mock_web_server: ^5.0.0-nullsafety.1
+  freezed:
 ##  lint: ^1.7.2
 
 dependency_overrides:
