--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,8 @@ dependencies:
   logger: ^1.1.0
   flutter_dotenv: ^5.0.2
   validators: ^3.0.0
-  auto_route: ^3.1.3
-  dio: ^4.0.3
+  auto_route: ^3.2.0
+  dio: ^4.0.4
   retrofit: ">=3.0.0 <4.0.0"
   pretty_dio_logger: ^1.1.1
   mobx: ^2.0.5
@@ -49,12 +49,13 @@ dependencies:
   web3dart: ^2.3.3
   sha3: ^0.2.0
   eventify: ^1.0.0
+  decimal:
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+#  flutter_test:
+#    sdk: flutter
   flutter_lints: ^1.0.0
-  test: ^1.19.3
+  test: ^1.20.0
   build_runner:
   flutter_gen_runner:
   retrofit_generator: ">=3.0.0 <4.0.0"
@@ -67,8 +68,9 @@ dev_dependencies:
   mock_web_server: ^5.0.0-nullsafety.1
 ##  lint: ^1.7.2
 
-dependency_overrides:
-  test_api: 0.4.2
+#dependency_overrides:
+#  test_api: 0.4.2
+#  matcher: 0.12.11
 
 ## https://pub.dev/packages/flutter_gen
 flutter_gen:
