--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   logger: ^1.1.0
   flutter_dotenv: ^5.0.2
   validators: ^3.0.0
-  auto_route: ^3.1.3
+  auto_route: ^3.2.0
   dio: ^4.0.4
   retrofit: ">=3.0.0 <4.0.0"
   pretty_dio_logger: ^1.1.1
@@ -50,7 +50,7 @@ dependencies:
   web3dart: ^2.3.3
   sha3: ^0.2.0
   eventify: ^1.0.0
-  decimal:
+  decimal: ^2.1.0
 
 dev_dependencies:
 #  flutter_test:
