--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,5 +48,9 @@
 		</array>
 		<key>UIStatusBarHidden</key>
 		<false/>
+		<key>io.flutter.embedded_views_preview</key>
+        <true/>
+        <key>NSCameraUsageDescription</key>
+        <string>This app needs camera access to scan QR codes</string>
 	</dict>
 </plist>
