--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -21,9 +21,21 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
+def walletRoot = rootDir.getAbsolutePath().replace("android", "")
+def keyStorePropertiesFile = new File("$walletRoot/release/key_store.properties")
+def keyStoreProperties = new Properties()
+keyStoreProperties.load(new FileInputStream(keyStorePropertiesFile))
+
+def useReleaseKeystore = rootProject.file("$walletRoot/release/ezc_dev.jks").exists()
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+
+if (file("google-services.json").exists()) {
+    apply plugin: 'com.google.gms.google-services'
+    apply plugin: 'com.google.firebase.crashlytics'
+}
 
 android {
     compileSdkVersion 30
@@ -42,19 +54,38 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "net.roichain.wallet"
+        applicationId "net.ezchain.wallet"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
 
-    buildTypes {
+    signingConfigs {
+        debug {
+            if (useReleaseKeystore) {
+                storeFile file("$walletRoot/release/ezc_dev.jks")
+                storePassword keyStoreProperties['STORE_PASSWORD']
+                keyAlias keyStoreProperties['KEY_ALIAS']
+                keyPassword keyStoreProperties['KEY_PASSWORD']
+            }
+        }
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
+            if (useReleaseKeystore) {
+                storeFile file("$walletRoot/release/ezc_dev.jks")
+                storePassword keyStoreProperties['STORE_PASSWORD']
+                keyAlias keyStoreProperties['KEY_ALIAS']
+                keyPassword keyStoreProperties['KEY_PASSWORD']
+            }
+        }
+    }
+
+    buildTypes {
+        debug {
             signingConfig signingConfigs.debug
+        }
+        release {
+            signingConfig signingConfigs.release
         }
     }
 }
@@ -65,4 +96,7 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation platform('com.google.firebase:firebase-bom:29.0.3')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
 }
