--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_switch: ^0.3.2
   freezed_annotation:
   qr_code_scanner: ^0.6.1
+  firebase_core: ^1.10.6
+  firebase_analytics: ^9.0.4
+  firebase_crashlytics: ^2.4.4
 
   ## crypto dependencies
   fast_base58: ^0.2.1
