--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -52,5 +52,10 @@
         <true/>
         <key>NSCameraUsageDescription</key>
         <string>This app needs camera access to scan QR codes</string>
+        <key>NSAppTransportSecurity</key>
+        <dict>
+            <key>NSAllowsLocalNetworking</key>
+            <true/>
+        </dict>
 	</dict>
 </plist>
