--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,7 +57,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "net.ezchain.wallet"
+        applicationId "com.ezchain.wallet"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
