--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_switch: ^0.3.2
   freezed_annotation:
   qr_code_scanner: ^0.6.1
+  qr_flutter: ^4.0.0
+  share_plus: ^3.1.0
   firebase_core: ^1.10.6
   firebase_analytics: ^9.0.4
   firebase_crashlytics: ^2.4.4
@@ -55,7 +57,6 @@ dependencies:
   sha3: ^0.2.0
   eventify: ^1.0.0
   decimal: ^2.1.0
-  qr_flutter: ^4.0.0
 
 dev_dependencies:
 #  flutter_test:
