--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,8 @@ dependencies:
   dio: ^4.0.4
   retrofit: ">=3.0.0 <4.0.0"
   pretty_dio_logger: ^1.1.1
-  mobx: ^2.0.5
-  flutter_mobx: ^2.0.2
+  mobx: ^2.0.6+1
+  flutter_mobx: ^2.0.4
   get_it: ^7.2.0
   injectable: ^1.5.0
   cached_network_image: ^3.1.0+1
@@ -59,14 +59,14 @@ dependencies:
   decimal: ^2.1.0
 
 dev_dependencies:
-#  flutter_test:
-#    sdk: flutter
+  #  flutter_test:
+  #    sdk: flutter
   flutter_lints: ^1.0.0
   test: ^1.20.0
   build_runner:
   flutter_gen_runner:
-  retrofit_generator: ">=3.0.0 <4.0.0"
-  mobx_codegen: ^2.0.4
+  retrofit_generator: ^4.0.1
+  mobx_codegen: ^2.0.5+2
   injectable_generator: ^1.5.2
   json_serializable: ^6.0.1
   auto_route_generator: ^3.1.0
