--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   qr_code_scanner: ^0.6.1
   qr_flutter: ^4.0.0
   share_plus: ^3.1.0
+  local_auth: ^1.1.11
   firebase_core: ^1.10.6
   firebase_analytics: ^9.0.4
   firebase_crashlytics: ^2.4.4
