--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_core: ^1.10.6
   firebase_analytics: ^9.0.4
   firebase_crashlytics: ^2.4.4
+  async: ^2.8.2
 
   ## crypto dependencies
   fast_base58: ^0.2.1
