--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: wallet
-description: EZC Wallet
+description: EZChain Wallet
 
 publish_to: none
 
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: ">=2.14.0 <3.0.0"
