--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_analytics: ^9.0.4
   firebase_crashlytics: ^2.4.4
   async: ^2.8.2
+  package_info_plus: ^1.4.2
 
   ## crypto dependencies
   fast_base58: ^0.2.1
