--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   sha3: ^0.2.0
   eventify: ^1.0.0
   decimal: ^2.1.0
+  infinite_scroll_pagination: ^3.1.0
 
 dev_dependencies:
   #  flutter_test:
